# SkySQL

./: CMakeLists.txt  Query.cpp  Query.h  Record.cpp  Record.h  base_element.cpp  base_element.h  main.cpp  stdafx.h
API/: API.cpp  API.h
BufferManager/: BufferManager.cpp  BufferManager.h
CatalogManager/: CatalogManager.cpp  CatalogManager.h
IndexManager/: BPlusTree.h  IndexManager.cpp  IndexManager.h
InterpreterManager/: BooleanQueryNode.h  InterpreterManager.cpp  InterpreterManager.h  Parser.cpp  Parser.h
RecordManager/: RecordManager.cpp  RecordManager.h
Utility/: utils.cpp  utils.h
data/: index.cat  table.cat
data/catalog/: rel_i_1_1000  rel_i_1_10000  rel_i_1_100000  rel_i_i_1000  rel_i_i_10000  rel_i_i_100000  student_grades  student_info
data/record/: _TBL_rel_i_1_100000__PageID_0___  _TBL_rel_i_1_100000__PageID_10___  _TBL_rel_i_1_100000__PageID_12___  _TBL_rel_i_1_100000__PageID_14___  _TBL_rel_i_1_100000__PageID_15___  _TBL_rel_i_1_100000__PageID_16___  _TBL_rel_i_1_100000__PageID_17___  _TBL_rel_i_1_100000__PageID_19___  _TBL_rel_i_1_100000__PageID_20___  _TBL_rel_i_1_100000__PageID_21___  _TBL_rel_i_1_100000__PageID_22___  _TBL_rel_i_1_100000__PageID_23___  _TBL_rel_i_1_100000__PageID_24___  _TBL_rel_i_1_100000__PageID_25___  _TBL_rel_i_1_100000__PageID_26___  _TBL_rel_i_1_100000__PageID_27___  _TBL_rel_i_1_100000__PageID_28___  _TBL_rel_i_1_100000__PageID_29___  (+149 more)
test/: demo1.sql  demo2.sql  demo3.sql  demo4.sql  test.sql  test3.sql  test_delete.sql  test_distinct.sql  test_join.sql  test_join1.sql  test_max.sql  test_or.sql  test_orderby.sql
(+22 files in other folders)
